Add website icon(ico file), update profile image, change color palette

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!--
     - favicon
   -->
-        <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="./assets/images/AboutMe/Website_icon_transparent.ico" type="image/x-icon">
         <!--
     - custom css link
   -->
@@ -30,7 +30,7 @@
             <aside class="sidebar" data-sidebar>
                 <div class="sidebar-info">
                     <figure class="avatar-box">
-                        <img src="./assets/images/my-avatar.png" alt="Yunting Zhao" width="80">
+                        <img src="./assets/images/AboutMe/my_headshot_small.png" alt="Yunting Zhao" width="80">
                     </figure>
                     <div class="info-content">
                         <h1 class="name" title="Yunting Zhao">Yunting Zhao</h1>
