--- a/index.html
+++ b/index.html
@@ -118,6 +118,18 @@
             across your
             message and identity in the most creative way. I created web design for many famous brand companies.</p>
                     </section>
+                     <!-- Image Gallery Slideshow -->
+     <!-- Image Gallery -->
+     <section class="gallery">
+        <h3 class="h3 gallery-title">Life at a Glance</h3>
+        <ul class="gallery-list has-scrollbar">
+            <li class="gallery-item"><img src="./assets/images/AboutMe/MB_class.png" alt="Caption 1"></li>
+            <li class="gallery-item"><img src="./assets/images/AboutMe/MB_me_teaching.JPG" alt="Caption 1"></li>
+            <li class="gallery-item"><img src="./assets/images/image1.jpg" alt="Caption 1"></li>
+
+        </ul>
+    </section>
+
                     <!--
           - service
         -->
