update images at Life at a glance

--- a/index.html
+++ b/index.html
@@ -118,17 +118,22 @@
             across your
             message and identity in the most creative way. I created web design for many famous brand companies.</p>
                     </section>
-                     <!-- Image Gallery Slideshow -->
-     <!-- Image Gallery -->
-     <section class="gallery">
-        <h3 class="h3 gallery-title">Life at a Glance</h3>
-        <ul class="gallery-list has-scrollbar">
-            <li class="gallery-item"><img src="./assets/images/AboutMe/MB_class.png" alt="Caption 1"></li>
-            <li class="gallery-item"><img src="./assets/images/AboutMe/MB_me_teaching.JPG" alt="Caption 1"></li>
-            <li class="gallery-item"><img src="./assets/images/image1.jpg" alt="Caption 1"></li>
+                     
+<!-- Image Gallery -->
+<section class="gallery">
+    <h3 class="h3 gallery-title">Life at a Glance</h3>
+    <ul class="gallery-list has-scrollbar">
+        <li class="gallery-item"><div class="image-container"><img src="./assets/images/AboutMe/Life_MB_class.png" alt="Teaching at Meta HQ"><div class="caption">Teaching at Meta HQ</div></div></li>
+        <li class="gallery-item"><div class="image-container"><img src="./assets/images/AboutMe/Life_MB_me_teaching.JPG" alt="Teaching VR developing"><div class="caption">Teaching VR developing</div></div></li>
+        <li class="gallery-item"><div class="image-container"><img src="./assets/images/AboutMe/Life_watercolor_box.png" alt="My Kuretake watercolor kit"><div class="caption">My Kuretake watercolor kit</div></div></li>
+        <li class="gallery-item"><div class="image-container"><img src="./assets/images/AboutMe/Life_watercolor_wall.png" alt="My watercolor"><div class="caption">watercolor</div></div></li>
+        <li class="gallery-item"><div class="image-container"><img src="./assets/images/AboutMe/Life_givingTalkAboutXR.JPG" alt="Me Giving talk about XR"><div class="caption">Me Giving talk about XR</div></div></li>
+        <li class="gallery-item"><div class="image-container"><img src="./assets/images/AboutMe/Life_me_metalwork.jpg" alt="Some matel work"><div class="caption">Some matel work</div></div></li>
+        <li class="gallery-item"><div class="image-container"><img src="./assets/images/AboutMe/Life_soldering.png" alt="Soldering my wearable design"><div class="caption">Soldering my wearable design</div></div></li>
+        <li class="gallery-item"><div class="image-container"><img src="./assets/images/AboutMe/Life_me_memphis_design.png" alt="My Memphis design"><div class="caption">My Memphis design</div></div></li>
+    </ul>
+</section>
 
-        </ul>
-    </section>
 
                     <!--
           - service
