Image gallery done

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                     <div class="separator"></div>
                     <ul class="social-list">
                         <li class="social-item">
-                            <a href="#" class="social-link"><ion-icon name="logo-facebook"></ion-icon></a>
+                            <a href="https://www.linkedin.com/in/yuntingzhao/" class="social-link"><ion-icon name="logo-linkedin"></ion-icon></a>
                         </li>
                         <li class="social-item">
-                            <a href="#" class="social-link"><ion-icon name="logo-twitter"></ion-icon></a>
+                            <a href="https://yuntingzhao.com/" class="social-link"><ion-icon name="home-outline"></ion-icon></a>
                         </li>
                         <li class="social-item">
                             <a href="#" class="social-link"><ion-icon name="logo-instagram"></ion-icon></a>
