--- a/index.html
+++ b/index.html
@@ -317,16 +317,14 @@
                         </div>
                         <ol class="timeline-list">
                          <li class="timeline-item">
-    <h4 class="h4 timeline-item-title">University of California, Berkeley</h4>
+    <h4 class="h4 timeline-item-title">University of California - Berkeley, CA</h4>
     <span>Dec 2024</span>
-    <p class="timeline-text">Master of Design - Interaction Design. XR Designer at UC Berkeley's XR Lab and FHL Vive Center for Enhanced Reality.</p>
-    <p class="timeline-text">Berkeley, CA</p>
-</li>
+    <p class="timeline-text">Master of Design - Interaction Design.<br> 
+        <em>XR Designer at UC Berkeley's XR Lab and FHL Vive Center for Enhanced Reality.</em></p>        
 <li class="timeline-item">
-    <h4 class="h4 timeline-item-title">University of Miami</h4>
+    <h4 class="h4 timeline-item-title">University of Miami, FL</h4>
     <span>June 2022</span>
     <p class="timeline-text">Bachelor's in Computer Science and Game & Interactive Media.</p>
-    <p class="timeline-text">Miami, FL</p>
 </li>
 
                         </ol>
@@ -340,27 +338,47 @@
                         </div>
                         <ol class="timeline-list">
                             <li class="timeline-item">
-                                <h4 class="h4 timeline-item-title">Creative director</h4>
-                                <span>2015 — Present</span>
-<p class="timeline-text">Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.</p>
+                                <h4 class="h4 timeline-item-title">Teaching Faculty</h4>
+                                <span>2024 — Present</span>
+                                <p class="timeline-text">
+                                    <span style="color: var(--white-2);">Mission Bit · Menlo Park, CA</span>
+                                    Taught a class of 23 students at Meta HQ on Unity and VR fundamentals, including game design and 3D. Assisted the instructor in solving technical issues and fostering community and collaboration.
+                                </p>
                             </li>
                             <li class="timeline-item">
-                                <h4 class="h4 timeline-item-title">Art director</h4>
-                                <span>2013 — 2015</span>
-<p class="timeline-text">Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.</p>
+                                <h4 class="h4 timeline-item-title">AR Experience Developer (HMD Development Team)</h4>
+                                <span>2024 — Present</span>
+                                <p class="timeline-text">
+                                    <span style="color: var(--white-2);">FHL Vive Center for Enhanced Reality · Berkeley, CA</span>
+                                    Managed the front-end implementation of the HMD navigation system for AR Hololens, enhancing user engagement through simplified interfaces.
+                                </p>
                             </li>
                             <li class="timeline-item">
-                                <h4 class="h4 timeline-item-title">Web designer</h4>
-                                <span>2010 — 2013</span>
-<p class="timeline-text">Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.</p>
+                                <h4 class="h4 timeline-item-title">Software Engineer</h4>
+                                <span>2022 — 2023</span>
+                                <p class="timeline-text">
+                                    <span style="color: var(--white-2);">ShiftPixyLabs · Miami, FL</span>
+                                    Focused on game development with Unity3D and C#. Collaborated on AR activations and 3D design, contributing to projects like drone animations and item recreations.
+                                </p>
                             </li>
-                        </ol>
+                            <li class="timeline-item">
+                                <h4 class="h4 timeline-item-title">AR/VR Developer</h4>
+                                <span>2022</span>
+                                <p class="timeline-text">
+                                    <span style="color: var(--white-2);">Institute for Data Science & Computing · Miami, FL</span>
+                                    Co-developed an AR and VR ophthalmoscopy simulator, handling UI design, wireframing, and 3D modeling. Worked with research teams to ensure user-centric XR solutions.
+                                </p>
+                            </li>
+                            <li class="timeline-item">
+                                <h4 class="h4 timeline-item-title">Creative Designer</h4>
+                                <span>2020 — 2021</span>
+                                <p class="timeline-text">
+                                    <span style="color: var(--white-2);">NerdLab · Miami, FL</span>
+                                    Designed visual elements for games in Unity and Unreal. Assisted in various technical and artistic tasks, ensuring a balance between functionality and visual appeal.
+                                </p>
+                            </li>
+                        </ol>                        
+                        
                     </section>
                     <section class="skill">
                         <h3 class="h3 skills-title">My skills</h3>
