Alignup the text by adding height: 2.5em

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
                         <li class="navbar-item">
                             <button class="navbar-link" data-nav-link>Portfolio</button>
                         </li>
-                        <li class="navbar-item">
+                        <!-- <li class="navbar-item">
                             <button class="navbar-link" data-nav-link>Blog</button>
-                        </li>
+                        </li> -->
                         <li class="navbar-item">
-                            <button class="navbar-link" data-nav-link>Art for the Day</button>
+                            <button class="navbar-link" data-nav-link>Art </button>
                         </li>
                     </ul>
                 </nav>
@@ -575,7 +575,7 @@
                         <p class="project-category">Design Engineering, Product Design</p>
                     </a>
                 </li>
-                <li class="project-item active" data-filter-item data-category="design engineering">
+                <li class="project-item active" data-filter-item data-category="design engineering|Product Design">
                     <a href="https://yuntingzhao.com/1253">
                         <figure class="project-img">
                             <div class="project-item-icon-box">
@@ -605,7 +605,7 @@
                             <div class="project-item-icon-box">
                                 <ion-icon name="eye-outline"></ion-icon>
                             </div>
-                            <img src="./assets/images/project-4.jpg" alt="Design and Fabrication" loading="lazy">
+                            <img src="./assets/images/projects/op_fab.png" alt="Design and Fabrication" loading="lazy">
                         </figure>
                         <h3 class="project-title">Design and Fabrication</h3>
                         <p class="project-category">Design Engineering</p>
@@ -636,18 +636,7 @@
                         <p class="project-category">Product Design</p>
                     </a>
                 </li>
-                <li class="project-item active" data-filter-item data-category="product design">
-                    <a href="https://yuntingzhao.com/1253">
-                        <figure class="project-img">
-                            <div class="project-item-icon-box">
-                                <ion-icon name="eye-outline"></ion-icon>
-                            </div>
-                            <img src="./assets/images/projects/ShiftPixy/op_AR_activation.png" alt="AR Activation" loading="lazy">
-                        </figure>
-                        <h3 class="project-title">AR Activation</h3>
-                        <p class="project-category">Product Design</p>
-                    </a>
-                </li>
+   
                 <li class="project-item active" data-filter-item data-category="product design">
                     <a href="#">
                         <figure class="project-img">
@@ -672,18 +661,7 @@
                         <p class="project-category">Product Design</p>
                     </a>
                 </li>
-                <li class="project-item active" data-filter-item data-category="product design">
-                    <a href="#">
-                        <figure class="project-img">
-                            <div class="project-item-icon-box">
-                                <ion-icon name="eye-outline"></ion-icon>
-                            </div>
-                            <img src="./assets/images/project-1.jpg" alt="HeartSync" loading="lazy">
-                        </figure>
-                        <h3 class="project-title">HeartSync</h3>
-                        <p class="project-category">Product Design</p>
-                    </a>
-                </li>
+    
                 <!-- Technical Art -->
                 <!-- <li class="project-item active" data-filter-item data-category="technical art">
                     <a href="#">
@@ -752,7 +730,7 @@
                 <!--
         - #BLOG
       -->
-                <article class="blog" data-page="blog">
+                <!-- <article class="blog" data-page="blog">
                     <header>
                         <h2 class="h2 article-title">Blog</h2>
                     </header>
@@ -832,7 +810,7 @@
                             </li>
                         </ul>
                     </section>
-                </article>
+                </article> -->
                 <!--
         - #CONTACT
       -->
@@ -855,21 +833,12 @@
                         </form>
                     </section>
                 </article> -->
-                <!-- #ART FOR THE DAY -->
-<article class="art-for-the-day" data-page="art-for-the-day">
+                <!-- #Art  -->
+<article class="art" data-page="art">
     <header>
-        <h2 class="h2 article-title">Art for the Day</h2>
+        <h2 class="h2 article-title">Art</h2>
     </header>
-    <section class="image-gallery">
-        <!-- Images from ArtStation or Instagram will be dynamically loaded here -->
-        <div class="gallery-container" id="gallery-container">
-            <!-- Example images (replace with dynamic content) -->
-            <!-- <img src="image1.jpg" alt="Art 1" class="gallery-item">
-            <img src="image2.jpg" alt="Art 2" class="gallery-item">
-            <img src="image3.jpg" alt="Art 3" class="gallery-item"> -->
-            <!-- More images... -->
-        </div>
-    </section>
+    <section class="mapbox" ></section>
 </article>
             </div>
         </main>
