--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>vCard - Personal Portfolio</title>
+        <title>Yunting Portfolio</title>
         <!--
     - favicon
   -->
@@ -133,48 +133,53 @@
                     <!--
           - service
         -->
-                    <section class="service">
-                        <h3 class="h3 service-title">What i'm doing</h3>
-                        <ul class="service-list">
-                            <li class="service-item">
-                                <div class="service-icon-box">
-                                    <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
-                                </div>
-                                <div class="service-content-box">
-                                    <h4 class="h4 service-item-title">Web design</h4>
-                                    <p class="service-item-text">The most modern and high-quality design made at a professional level.</p>
-                                </div>
-                            </li>
-                            <li class="service-item">
-                                <div class="service-icon-box">
-                                    <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
-                                </div>
-                                <div class="service-content-box">
-                                    <h4 class="h4 service-item-title">Web development</h4>
-                                    <p class="service-item-text">High-quality development of sites at the professional level.</p>
-                                </div>
-                            </li>
-                            <li class="service-item">
-                                <div class="service-icon-box">
-                                    <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
-                                </div>
-                                <div class="service-content-box">
-                                    <h4 class="h4 service-item-title">Mobile apps</h4>
-                                    <p class="service-item-text">Professional development of applications for iOS and Android.</p>
-                                </div>
-                            </li>
-                            <li class="service-item">
-                                <div class="service-icon-box">
-                                    <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
-                                </div>
-                                <div class="service-content-box">
-                                    <h4 class="h4 service-item-title">Photography</h4>
-                                    <p class="service-item-text">I make high-quality photos of any category at a professional level.</p>
-                                </div>
-                            </li>
-                        </ul>
-                    </section>
+        <section class="service">
+            <h3 class="h3 service-title">What I'm Doing</h3>
+            <ul class="service-list">
+                <!-- Design Engineering -->
+                <li class="service-item">
+                    <div class="service-icon-box">
+                        <ion-icon name="desktop-outline" class="large-icon"></ion-icon>
+                    </div>
+                    <div class="service-content-box">
+                        <h4 class="h4 service-item-title">Design Engineering</h4>
+                        <p class="service-item-text">Creative technology work that blends digital and physical design.</p>
+                    </div>
+                </li>
+                <!-- Product Design -->
+                <li class="service-item">
+                    <div class="service-icon-box">
+                        <ion-icon name="brush-outline" class="large-icon"></ion-icon>
+                    </div>
+                    <div class="service-content-box">
+                        <h4 class="h4 service-item-title">Product Design</h4>
+                        <p class="service-item-text">Innovative product designs with a focus on user experience and project management.</p>
+                    </div>
+                </li>
+                <!-- Technical Art -->
+                <li class="service-item">
+                    <div class="service-icon-box">
+                        <ion-icon name="color-palette-outline" class="large-icon"></ion-icon>
+                    </div>
+                    <div class="service-content-box">
+                        <h4 class="h4 service-item-title">Technical Art</h4>
+                        <p class="service-item-text">Combining artistry and technology to create visually stunning and technically complex projects.</p>
+                    </div>
+                </li>
+                <!-- XR & Game Development -->
+                <li class="service-item">
+                    <div class="service-icon-box">
+                        <ion-icon name="game-controller-outline" class="large-icon"></ion-icon>
+                    </div>
+                    <div class="service-content-box">
+                        <h4 class="h4 service-item-title">XR & Game Development</h4>
+                        <p class="service-item-text">Developing immersive experiences in augmented and virtual reality, along with innovative game designs.</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+        
+        
                     <!--
           - testimonials
         -->
