--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <!--
           - testimonials
         -->
-                    <section class="testimonials">
+                    <!-- <section class="testimonials">
                         <h3 class="h3 testimonials-title">Testimonials</h3>
                         <ul class="testimonials-list has-scrollbar">
                             <li class="testimonials-item">
@@ -247,11 +247,11 @@
                                 </div>
                             </li>
                         </ul>
-                    </section>
+                    </section> -->
                     <!--
           - testimonials modal
         -->
-                    <div class="modal-container" data-modal-container>
+                    <!-- <div class="modal-container" data-modal-container>
                         <div class="overlay" data-overlay></div>
                         <section class="testimonials-modal">
                             <button class="modal-close-btn" data-modal-close-btn><ion-icon name="close-outline"></ion-icon></button>
@@ -273,7 +273,7 @@
                                 </div>
                             </div>
                         </section>
-                    </div>
+                    </div> -->
                     <!--
           - clients
         -->
