--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                         <!-- <li class="navbar-item">
                             <button class="navbar-link" data-nav-link>Blog</button>
                         </li> -->
-                        <li class="navbar-item">
+                        <!-- <li class="navbar-item">
                             <button class="navbar-link" data-nav-link>Art </button>
-                        </li>
+                        </li> -->
                     </ul>
                 </nav>
                 <!--
