update puzzle now proj

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                 </p>
                             </li>
                             <li class="timeline-item">
-                                <h4 class="h4 timeline-item-title">AR Experience Developer (HMD Development Team)</h4>
+                                <h4 class="h4 timeline-item-title">XR Experience Developer (HMD Development Team)</h4>
                                 <span>2024 — Present</span>
                                 <p class="timeline-text">
                                     <span style="color: var(--white-2);">FHL Vive Center for Enhanced Reality · Berkeley, CA</span>
@@ -280,8 +280,8 @@
                                 </p>
                             </li>
                         </ol>                        
-                        
-                    </section>
+                        <!--Feedback: This skills part is usless T T TODO: think of other way to show it-->
+                    <!-- </section>
                     <section class="skill">
                         <h3 class="h3 skills-title">My Skills</h3>
                         <ul class="skills-list content-card">
@@ -331,7 +331,7 @@
                                 </div>
                             </li>
                         </ul>
-                    </section>
+                    </section> -->
                                  <!--
         - #tools box
       -->
