--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
                         <h2 class="h2 article-title">About me</h2>
                     </header>
                     <section class="about-text">
-                        <p>Hi, I'm a multidisciplinary designer-engineer with a background in Interactive Media & Computer Science. My passions lie in interaction design and technology, transforming complex ideas into accessible, engaging user experiences. I enjoy game and XR development and have a deep love for art and animation.</p>
-                        <p>With a unique blend of technical expertise and artistic creativity, I specialize in crafting immersive virtual and augmented reality experiences. Whether it's developing a captivating game or designing an intuitive user interface, my goal is to bring your vision to life in the most innovative and engaging way possible. Let's create something amazing together!</p>
+                        <p> 
+                            Hi, I'm a <strong class="text-gradient">multidisciplinary designer-engineer</strong> with a background in Computer Science and Interactive Media. Passionate about <strong>interaction design</strong> and <strong>technology</strong>, I specialize in turning complex ideas into <strong>engaging, user-friendly experiences</strong>. My expertise ranges from <strong class="text-gradient">visual design</strong> to crafting <strong class="text-gradient">immersive XR experiences</strong>. I’m dedicated to bringing visions to life in innovative and impactful ways. Let’s create something amazing together!
+                          </p>
+
                         
                     </section>
                      
