tired didn't fix ins icon

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <a href="https://yuntingzhao.com/" class="social-link"><ion-icon name="home-outline"></ion-icon></a>
                         </li>
                         <li class="social-item">
-                            <a href="#" class="social-link"><ion-icon name="logo-instagram"></ion-icon></a>
+                            <a href="https://www.instagram.com/yunlove3d/?hl=en" class="social-link"><ion-icon name="logo-instagram"></ion-icon></a>
                         </li>
                     </ul>
                 </div>
@@ -112,9 +112,14 @@
                         <p> 
                             Hi, I'm a <strong class="text-gradient">multidisciplinary designer-engineer</strong> with a background in Computer Science and Interactive Media. Passionate about <strong>interaction design</strong> and <strong>technology</strong>, I specialize in turning complex ideas into <strong>engaging, user-friendly experiences</strong>. My expertise ranges from <strong class="text-gradient">visual design</strong> to crafting <strong class="text-gradient">immersive XR experiences</strong>. I’m dedicated to bringing visions to life in innovative and impactful ways. Let’s create something amazing together!
                           </p>
-
-                        
-                    </section>
+                          <p>
+                            Fun fact: I'm a watercolor enthusiast and a big fan of Blender. Lately, I've been using Blender for data visualization. Click the link below to check out some of my artwork: <a style="color: white;"href="https://www.instagram.com/yunlove3d/?hl=en" target="_blank" ><ion-icon name="logo-instagram"></ion-icon></a>
+                          </p>
+                          <div class="recent-project-image-wrapper">
+                            <img src="./assets/images/projects/TechnicalArt/ARcity.gif" alt="City Electricity Flow" class="recent-project-image">
+                            <p class="recent-project-caption">I'm rendering City Electricity Flow in Blender</p>
+                          </div>
+                </section>
                      
 <!-- Image Gallery -->
 <section class="gallery">
