--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <!-- Image Gallery -->
 <section class="gallery">
     <h3 class="h3 gallery-title">Life at a Glance</h3>
-    <ul class="gallery-list has-scrollbar">
+    <!-- <ul class="gallery-list has-scrollbar">
         <li class="gallery-item"><div class="image-container"><img src="./assets/images/AboutMe/Life_MB_class.png" alt="Teaching at Meta HQ"><div class="caption">Teaching at Meta HQ</div></div></li>
         <li class="gallery-item"><div class="image-container"><img src="./assets/images/AboutMe/Life_MB_me_teaching.JPG" alt="Teaching VR developing"><div class="caption">Teaching VR developing</div></div></li>
         <li class="gallery-item"><div class="image-container"><img src="./assets/images/AboutMe/Life_watercolor_box.png" alt="My Kuretake watercolor kit"><div class="caption">My Kuretake watercolor kit</div></div></li>
@@ -133,7 +133,8 @@
         <li class="gallery-item"><div class="image-container"><img src="./assets/images/AboutMe/Life_me_metalwork.jpg" alt="Some matel work"><div class="caption">Some matel work</div></div></li>
         <li class="gallery-item"><div class="image-container"><img src="./assets/images/AboutMe/Life_soldering.png" alt="Soldering my wearable design"><div class="caption">Soldering my wearable design</div></div></li>
         <li class="gallery-item"><div class="image-container"><img src="./assets/images/AboutMe/Life_me_memphis_design.png" alt="My Memphis design"><div class="caption">My Memphis design</div></div></li>
-    </ul>
+    </ul> -->
+    <img src="./assets/images/AboutMe/AboutMe.gif" alt="About Me" class="about-me-gif">
 </section>
 
 
