Make sure portfolio load first

--- a/index.html
+++ b/index.html
@@ -85,14 +85,16 @@
                 <nav class="navbar">
                     <ul class="navbar-list">
                         <li class="navbar-item">
-                            <button class="navbar-link  active" data-nav-link>About</button>
+                            <button class="navbar-link" data-nav-link>About</button>
                         </li>
                         <li class="navbar-item">
                             <button class="navbar-link" data-nav-link>Resume</button>
                         </li>
+                        <!-- TODO: should rename this from portfolio to projects -->
                         <li class="navbar-item">
-                            <button class="navbar-link" data-nav-link>Portfolio</button>
+                            <button class="navbar-link active" data-nav-link>Portfolio</button>
                         </li>
+                        <!-- TODO:Add individual portfolio -->
                         <!-- <li class="navbar-item">
                             <button class="navbar-link" data-nav-link>Blog</button>
                         </li> -->
@@ -486,7 +488,7 @@
                 <!--
         - #BLOG
       -->
-                <!-- <article class="blog" data-page="blog">
+                <article class="blog" data-page="blog">
                     <header>
                         <h2 class="h2 article-title">Blog</h2>
                     </header>
@@ -566,7 +568,7 @@
                             </li>
                         </ul>
                     </section>
-                </article> -->
+                </article> 
                 <!--
         - #CONTACT
       -->
