--- a/creative_designer.html
+++ b/creative_designer.html
@@ -3,15 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creative Designer - Yunting Zhao</title>
+    <link rel="shortcut icon" href="./assets/images/AboutMe/Website_icon_transparent.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&amp;display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <main>
-          <!--- #SIDEBAR-->
-          <aside class="sidebar" data-sidebar>
+        <!--- #SIDEBAR-->
+        <aside class="sidebar" data-sidebar>
             <div class="sidebar-info">
                 <figure class="avatar-box">
                     <img src="./assets/images/AboutMe/my_headshot_small.png" alt="Yunting Zhao" width="80">
@@ -63,64 +69,196 @@
                 </ul>
             </div>
         </aside>
-      <!--- #main-content -->
-      <div class="main-content">
-        <!--- #NAVBAR -->
-        <nav class="navbar">
-            <ul class="navbar-list">
-                <li class="navbar-item">
-                    <button class="navbar-link" data-nav-link>About</button>
-                </li>
-                <li class="navbar-item">
-                    <button class="navbar-link" data-nav-link>Resume</button>
-                </li>
-                <!-- TODO: should rename this from portfolio to projects -->
-                <li class="navbar-item">
-                    <button class="navbar-link" data-nav-link>Portfolio</button>
-                </li>
-                <li class="navbar-item">
-                    <button class="navbar-link active" data-nav-link>Creative Designer</button>
-                </li>
-            </ul>
-        </nav>
-        <!-- Projects Section -->
-        <article class="creative active" data-page="creative">
-        <div id="projects-container"></div>
-    </article>
+        <!--- #main-content -->
+        <div class="main-content">
+            <!--- #NAVBAR -->
+            <nav class="navbar">
+                <ul class="navbar-list">
+                    <li class="navbar-item">
+                        <button class="navbar-link" data-nav-link>About</button>
+                    </li>
+                    <li class="navbar-item">
+                        <button class="navbar-link" data-nav-link>Resume</button>
+                    </li>
+                    <!-- TODO: should rename this from portfolio to projects -->
+                    <li class="navbar-item">
+                        <button class="navbar-link" data-nav-link>Portfolio</button>
+                    </li>
+                    <li class="navbar-item">
+                        <button class="navbar-link active" data-nav-link>Creative Designer</button>
+                    </li>
+                </ul>
+            </nav>
+            <!-- Main Content -->
+            <article class="creative active" data-page="creative">
+                <header>
+                    <h2 class="h2 article-title">Creative Designer</h2>
+                </header>
+                <section class="project-text">
+                    <h3 class="h3">Cluckin Lucky</h3>
+                    <p>During my time at ShiftPixy, I worked on Cluckin Lucky, an augmented reality experience for local
+                        restaurants, focusing on creating a fun and engaging way for diners to interact with their
+                        environment while waiting for their meals.</p>
+                    <p><strong>I was responsible for designing the user experience to increase customer engagement.
+                            Diners can play the game and use the points they earned for discounts on their food
+                            purchases.</strong></p>
+                    <p>This product not only provided entertainment but also added value to the dining experience,
+                        encouraging repeat visits and increased customer loyalty.</p>
+                        <div class="project-image-grid">
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/ShiftPixy/op_clukin_luck_animation.gif" alt="Project Image"
+                            class="signlepage-project-image">
+                        <p class="signlepage-project-caption">brand Animation</p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/ShiftPixy/op_clukin_luck_game.gif" alt="Project Image"
+                            class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Clukin lucky game</p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/ShiftPixy/3D_motion_tracking.png" alt="Project Image"
+                            class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Another brand We were working on - Dude Rudy</p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/ShiftPixy/3D_tracking_1.png" alt="Project Image"
+                            class="signlepage-project-image">
+                        <p class="signlepage-project-caption">3D motion tracking process</p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/ShiftPixy/3D_tracking_2.png" alt="Project Image"
+                            class="signlepage-project-image">
+                        <p class="signlepage-project-caption">2D animation</p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/ShiftPixy/3D_tracking_anime.gif" alt="Project Image"
+                            class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Clip from final video.</p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/ShiftPixy/Animation_working_progress.png" alt="Project Image"
+                            class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Behind the scene</p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/ShiftPixy/Digital_food.png" alt="Project Image"
+                            class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Digitized food for an AR menu</p>
+                    </div>
+                </div>
+                </section>
+                <section class="project-text">
+                    <h3 class="h3">Character Face Tracking</h3>
+                    <p>Animation Video for promoting product</p>
+                    <p>During my time at ShiftPixy, in addition to contributing to game development, I also utilized my
+                        3D modeling and sketching skills in animation production. I was responsible for the 3D tracking
+                        portion, integrating characters into real-world scenes. Additionally, I created 2D animations
+                        and projected them onto walls as textures.</p>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/ShiftPixy/rombo_face_tracking.gif"
+                            alt="Character Face Tracking" class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Character Face Tracking Example</p>
+                    </div>
+                </section>
 
-    </div>
-        <!-- JavaScript to Load JSON -->
-        <script>
-            // Load the project data from the JSON file
-            fetch('./assets/data/projects.json')
-                .then(response => response.json())
-                .then(projects => {
-                    const container = document.getElementById('projects-container');
-                    projects.forEach(project => {
-                        let projectHTML = `
-                            <section class="project-container">
-                                <div class="project-text-content">
-                                    <h3 class="h3">${project.title}</h3>
-                                    <p>${project.short_description}</p>
-                                    <p>${project.detailed_description}</p>
-                                </div>
-                                <div class="project-image-content">
-                        `;
-                        project.images.forEach(image => {
-                            projectHTML += `
-                                <div class="recent-project-image-wrapper">
-                                    <img src="${image.src}" alt="${image.alt}" class="recent-project-image">
-                                    <p class="recent-project-caption">${image.caption}</p>
-                                </div>
-                            `;
-                        });
-                        projectHTML += `</div></section>`;
-                        container.innerHTML += projectHTML;
-                    });
-                })
-                .catch(error => console.error('Error loading project data:', error));
-        </script>
+                <section class="project-text">
+                    <h3 class="h3">SunWATER Plus</h3>
+                    <p>NSF-Funded Project</p>
+                    <p>During my role as a Product Designer and Researcher on the NSF-funded SunWATER Plus project at UC
+                        Berkeley, I collaborated with cross-functional teams, including data analysts and a fabrication
+                        team, to design the UIUX of a greywater recycling system for hotels and domestic residentials.
+                        My responsibilities spanned from ideation to the production of the software, where I created
+                        wireframes, prototypes, and high-fidelity mockups using Figma, ensuring a sleek and visually
+                        appealing design. I also designed an AR feature for solar panel tracking and water filtration
+                        animations, enhancing the app’s interactivity. Due to the sensitive nature of the project,
+                        specific details are under NDA. Additionally, I conducted user research and gathered feedback to
+                        iterate quickly, improving the app’s usability and functionality.</p>
+                        <div class="project-image-grid">
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/NDA/SWP_1.png" alt="SunWATER Plus"
+                            class="signlepage-project-image">
+                        <p class="signlepage-project-caption">AI numerical model</p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/NDA/SWP_2.png" alt="SunWATER Plus"
+                            class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Solar panel and multiscale model</p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/NDA/SWP_3.png" alt="SunWATER Plus"
+                            class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Onsite installations</p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/NDA/SWP_4.png" alt="SunWATER Plus"
+                            class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Phase 1 UI Design</p>
+                    </div>
+                </div>
+                </section>
+
+                <section class="project-text">
+                    <h3 class="h3">NASA SUITS Creative Design Challenge</h3>
+                    <p>AR + AI + HoloLens</p>
+                    <p>This AR HoloLens project aimed to develop an all-in-one interface for NASA astronauts. This
+                        innovative AR UI interface was designed to be non-intrusive, ensuring that critical information
+                        could be displayed without obstructing the view. Voice control system was implemented by a
+                        language model (LLM), which can facilitate hands-free operation. Additionally, it included a
+                        rover tracking feature, allowing astronauts to control Leo rovers. Our team utilized robot
+                        digital twin datasets to train the model, making contributions in the field of space exploration
+                        technology.</p>
+                        <div class="project-image-grid">
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/XR/NASAsuits_teamPre.gif" alt="NASA SUITS Challenge" class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Final presentation at Johnson Space Center </p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/XR/NASAsuits_onsite.png" alt="NASA SUITS Challenge" class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Team photo</p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/XR/NASAsuits_workingMe.gif" alt="NASA SUITS Challenge" class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Me working onsite</p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/XR/NASAsuits_LLM.png" alt="NASA SUITS Challenge" class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Interface Concept and Logistic</p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/XR/NASAsuits_system.png" alt="NASA SUITS Challenge" class="signlepage-project-image">
+                        <p class="signlepage-project-caption">NASA SUITS System Structure</p>
+                    </div>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/XR/NASAsuits_team.png" alt="NASA SUITS Challenge" class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Adviors and Sponsors</p>
+                    </div>
+                </div>
+                </section>
+
+                <section class="project-text">
+                    <h3 class="h3">Physical Computing</h3>
+                    <p>Creative Design + Hardware</p>
+                    <p>In my free time, I enjoy designing various quirky things. Last year, at the Bay Area Maker Faire,
+                        my friends and I created and exhibited a laser wind chime. We used photon particles coupling
+                        with several time-of-flight sensors. When the wind moves the striker below the wind chime, it
+                        emits different sounds based on the distance and speed. We also tested using TouchDesigner,
+                        which allowed us to not only produce sound but also visualize the sound in the form of images.
+                    </p>
+                    <p>Additionally, I designed, 3D-printed, and assembled a small decorative piece called Heart Sync.
+                        If you’re interested, you can read more about it through the link.</p>
+                    <div class="signlepage-project-image-wrapper">
+                        <img src="./assets/images/projects/Physical_computing/det_proj1.gif" alt="Physical Computing" class="signlepage-project-image">
+                        <p class="signlepage-project-caption">Laser Chimes and Heart Sync Projects</p>
+                    </div>
+                </section>
+                
+
+            </article>
+
+
+        </div>
     </main>
+    </div>
 </body>
 
 </html>
