Update a new 3D art session, make the indepent page
1. Add "Back to Index" Link with Query Parameters
2. JavaScript to Handle the Back Button in index.html

--- a/creative_designer.html
+++ b/creative_designer.html
@@ -74,18 +74,20 @@
             <!--- #NAVBAR -->
             <nav class="navbar">
                 <ul class="navbar-list">
-                    <li class="navbar-item">
+                    <!-- <li class="navbar-item">
                         <button class="navbar-link" data-nav-link>About</button>
                     </li>
                     <li class="navbar-item">
                         <button class="navbar-link" data-nav-link>Resume</button>
                     </li>
-                    <!-- TODO: should rename this from portfolio to projects -->
                     <li class="navbar-item">
                         <button class="navbar-link" data-nav-link>Portfolio</button>
-                    </li>
+                    </li> -->
                     <li class="navbar-item">
                         <button class="navbar-link active" data-nav-link>Creative Designer</button>
+                    </li>
+                    <li class="navbar-item">
+                        <button class="navbar-link" onclick="window.location.href='index.html?ref=creative'">Back to Work</button>
                     </li>
                 </ul>
             </nav>
