--- a/index.html
+++ b/index.html
@@ -163,7 +163,10 @@
                 <!-- Design Engineering -->
                 <li class="service-item">
                     <div class="service-icon-box">
-                        <ion-icon name="desktop-outline" class="large-icon"></ion-icon>
+                        <!-- Hide link inside the icon -->
+                <a href="creative_designer.html" class="service-link">
+                    <ion-icon name="desktop-outline" class="large-icon"></ion-icon>
+                </a>
                     </div>
                     <div class="service-content-box">
                         <h4 class="h4 service-item-title">Design Engineering</h4>
