finally updated digital deisgner

--- a/creative_designer.html
+++ b/creative_designer.html
@@ -87,12 +87,12 @@
                         <button class="navbar-link active" data-nav-link>Creative Designer</button>
                     </li>
                     <li class="navbar-item">
-                        <button class="navbar-link" onclick="window.location.href='index.html?ref=creative'">Back to Work</button>
+                        <button class="navbar-link" onclick="window.location.href='index.html?ref=creative_designer'">Back to Main Page</button>
                     </li>
                 </ul>
             </nav>
             <!-- Main Content -->
-            <article class="creative active" data-page="creative">
+            <article class="creative_designer active" data-page="creative_designer">
                 <header>
                     <h2 class="h2 article-title">Creative Designer</h2>
                 </header>
