--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
                 <!-- Product Design -->
                 <li class="service-item">
                     <div class="service-icon-box">
+                        <a href="digital_designer.html" class="service-link">
                         <ion-icon name="brush-outline" class="large-icon"></ion-icon>
+                        </a>
                     </div>
                     <div class="service-content-box">
                         <h4 class="h4 service-item-title">Product Design</h4>
