--- a/digital_designer.html
+++ b/digital_designer.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creative Designer - Yunting Zhao</title>
+    <title>Digital Designer - Yunting Zhao</title>
     <link rel="shortcut icon" href="./assets/images/AboutMe/Website_icon_transparent.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
