--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
                 <!-- XR & Game Development -->
                 <li class="service-item">
                     <div class="service-icon-box">
-                        <ion-icon name="game-controller-outline" class="large-icon"></ion-icon>
+                        <a href="AR_developer.html" class="service-link">
+                            <ion-icon name="game-controller-outline" class="large-icon"></ion-icon>
+                        </a>
                     </div>
                     <div class="service-content-box">
                         <h4 class="h4 service-item-title">XR & Game Development</h4>
