--- a/digital_designer.html
+++ b/digital_designer.html
@@ -171,7 +171,7 @@
                 <section class="project-text">
                     <h3 class="h3-title">SunWATER Plus</h3>
                     <p>NSF-Funded Project</p>
-                    <p>During my role as a Product Designer and Researcher on the NSF-funded SunWATER Plus project at UC
+                    <p>During my role as a Designer and Researcher on the NSF-funded SunWATER Plus project at UC
                         Berkeley, I collaborated with cross-functional teams, including data analysts and a fabrication
                         team, to design the UIUX of a greywater recycling system for hotels and domestic residentials.
                         My responsibilities spanned from ideation to the production of the software, where I created
