--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
                 <!-- Technical Art -->
                 <li class="service-item">
                     <div class="service-icon-box">
-                        <ion-icon name="color-palette-outline" class="large-icon"></ion-icon>
+                        <a href="experience_designer.html" class="service-link">
+                            <ion-icon name="color-palette-outline" class="large-icon"></ion-icon>
+                        </a>
                     </div>
                     <div class="service-content-box">
                         <h4 class="h4 service-item-title">Technical Art</h4>
