--- a/visual_designer_home.html
+++ b/visual_designer_home.html
@@ -65,7 +65,7 @@
                 <!-- Featured Project Section -->
                 <section class="featured-project">
                     <div class="project-card-large">
-                        <img src="./assets/images/projects/NDA/OP_SunWATER+.png" alt="Lyft Project" class="project-image-large">
+                        <img src="./assets/images/projects/NDA/OP_SunWATER+.png" alt="SunWATER+ Project" class="project-image-large">
                         <div class="project-info-large">
                             <p class="project-label">SET TO LAUNCH IN Q4 2024</p>
                             <h2>Solar-Powered Solutions for Recycling Greywater</h2>
@@ -77,7 +77,7 @@
                 <!-- Other Projects Section -->
                 <section class="project-grid">
                     <div class="project-card">
-                        <img src="./assets/images/projects/ShiftPixy/op_clukin_luck_animation.gif" alt="Purple E-commerce" class="project-image">
+                        <img src="./assets/images/projects/ShiftPixy/op_clukin_luck_animation.gif" alt="ShiftPixy Labs" class="project-image">
                         <div class="project-info">
                             <p class="project-label">SET TO LAUNCH IN 2025</p>
                             <h3>Brading deisgn</h3>
@@ -86,7 +86,7 @@
                     </div>
 
                     <div class="project-card">
-                        <img src="./assets/images/projects/Innovative_design/MR_boba_demo.gif" alt="UCB Course Planning Tool" class="project-image">
+                        <img src="./assets/images/projects/Innovative_design/MR_boba_demo.gif" alt="XR" class="project-image">
                         <div class="project-info">
                             <p class="project-label">CONCEPT</p>
                             <h3>XR case study(a set of XR project)</h3>
@@ -95,10 +95,10 @@
                     </div>
 
                     <div class="project-card">
-                        <img src="./assets/images/projects/AI_art.png" alt="Smart Kitchen Appliance"
+                        <img src="./assets/images/projects/AI_art.png" alt="Print Art"
                             class="project-image">
                         <div class="project-info">
-                            <p class="project-label">Design work</p>
+                            <p class="project-label">PRINT ART</p>
                             <h3>Even planning & design work sample</h3>
                             <button class="learn-more-btn">Learn More →</button>
                         </div>
