add a tag - minor changes

--- a/visual_designer_home.html
+++ b/visual_designer_home.html
@@ -59,7 +59,7 @@
             </nav>
             <article class="ar_developer active" data-page="ar_developer">
                 <header>
-                    <h2 class="h2 article-title">Experience Designer</h2>
+                    <h2 class="h2 article-title">Creative Designer</h2>
                 </header>
 
                 <!-- Featured Project Section -->
@@ -69,6 +69,8 @@
                         <div class="project-info-large">
                             <p class="project-label">SET TO LAUNCH IN Q4 2024</p>
                             <h2>Solar-Powered Solutions for Recycling Greywater</h2>
+                             <!-- Add the new tag here -->
+                            <p class="project-tag">NSF Funded Project</p>
                             <button class="learn-more-btn">Learn More →</button>
                         </div>
                     </div>
