--- a/visual_designer_home.html
+++ b/visual_designer_home.html
@@ -48,18 +48,17 @@
             <nav class="navbar">
                 <ul class="navbar-list">
                     <li class="navbar-item">
-                        <button class="navbar-link active" data-nav-link>Experience Designer</button>
+                        <button class="navbar-link active" data-nav-link>Visual Designer</button>
                     </li>
                     <li class="navbar-item">
                         <button class="navbar-link"
-                            onclick="window.location.href='index.html?ref=experience_designer'">Back to Main
-                            Page</button>
+                            onclick="window.location.href='index.html?ref=experience_designer'">More</button>
                     </li>
                 </ul>
             </nav>
             <article class="ar_developer active" data-page="ar_developer">
                 <header>
-                    <h2 class="h2 article-title">Creative Designer</h2>
+                    <h2 class="h2 article-title">Visual Designer</h2>
                 </header>
 
                 <!-- Featured Project Section -->
@@ -107,12 +106,12 @@
                     </div>
 
                     <div class="project-card">
-                        <img src="./assets/images/projects/XR/NASAsuits_teamPre.gif" alt="AR Design for Astronauts"
+                        <img src="./assets/images/projects/XR/op_Ursa.png" alt="AR Design for Astronauts"
                             class="project-image">
                         <div class="project-info">
-                            <p class="project-label">VOICE CONTROL AR SYSTEM</p>
-                            <h3>AR design with voice commands for astronauts</h3>
-                            <button class="learn-more-btn">Learn More →</button>
+                            <p class="project-label">NASA SUIT CHALLENGE</p>
+                            <h3>AR Voice Control System for Astronauts</h3>
+                            <button class="learn-more-btn" onclick="window.location.href='project_page/Ursa.html';">Learn More →</button>
                         </div>
                     </div>
                 </section>
