--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     <article class="portfolio" data-page="projects"> 
         <!-- <data-page name needs to match navi bar name> -->
   <header>
-    <h2 class="h2 article-title">Portfolio</h2>
+    <h2 class="h2 article-title">Projects</h2>
   </header>
   <section class="projects">
     <ul class="filter-list">
